// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render icon  1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-"
/>
`;

exports[`Icon should render icon arrow-left-circle 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-arrow-left-circle"
/>
`;

exports[`Icon should render icon briefcase 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-briefcase"
/>
`;

exports[`Icon should render icon calendar 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-calendar"
/>
`;

exports[`Icon should render icon caravan 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-caravan"
/>
`;

exports[`Icon should render icon checkmark 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-checkmark"
/>
`;

exports[`Icon should render icon chef-hat 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-chef-hat"
/>
`;

exports[`Icon should render icon chevron-down 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-chevron-down"
/>
`;

exports[`Icon should render icon chevron-up 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-chevron-up"
/>
`;

exports[`Icon should render icon close 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-close"
/>
`;

exports[`Icon should render icon cog 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-cog"
/>
`;

exports[`Icon should render icon control-panel 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-control-panel"
/>
`;

exports[`Icon should render icon dashboard 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-dashboard"
/>
`;

exports[`Icon should render icon enter 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-enter"
/>
`;

exports[`Icon should render icon exit 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-exit"
/>
`;

exports[`Icon should render icon eye 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-eye"
/>
`;

exports[`Icon should render icon full-screen 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-full-screen"
/>
`;

exports[`Icon should render icon home 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-home"
/>
`;

exports[`Icon should render icon layers 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-layers"
/>
`;

exports[`Icon should render icon lock 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-lock"
/>
`;

exports[`Icon should render icon menu 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-menu"
/>
`;

exports[`Icon should render icon minus 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-minus"
/>
`;

exports[`Icon should render icon more 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-more"
/>
`;

exports[`Icon should render icon more-alt 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-more-alt"
/>
`;

exports[`Icon should render icon network 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-network"
/>
`;

exports[`Icon should render icon plane 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-plane"
/>
`;

exports[`Icon should render icon plus 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-plus"
/>
`;

exports[`Icon should render icon rocket 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-rocket"
/>
`;

exports[`Icon should render icon search 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-search"
/>
`;

exports[`Icon should render icon trash 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-trash"
/>
`;

exports[`Icon should render icon user 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-user"
/>
`;

exports[`Icon should render icon users 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-users"
/>
`;

exports[`Icon should render icon vector 1`] = `
<span
  className="sc-AxjAm jWlVxK lni lni-vector"
/>
`;

exports[`Icon should render icon with custom icon image 1`] = `
<img
  className="sc-AxirZ gjjgLW"
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Icon should render icon with custom styles 1`] = `
<span
  className="sc-AxiKw inYdnV sc-AxjAm jWlVxK lni lni-home"
/>
`;
